// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`test aube add command > command handles args correctly 1`] = `
{
  "args": [
    "add",
    "@antfu/ni",
    "-D",
  ],
  "command": "aube",
}
`;

exports[`test aube execute command > command handles args correctly 1`] = `
{
  "args": [
    "dlx",
    "eslint",
    "--fix",
  ],
  "command": "aube",
}
`;

exports[`test aube run command > command handles args correctly 1`] = `
{
  "args": [
    "run",
    "arg0",
    "arg1-0 arg1-1",
  ],
  "command": "aube",
}
`;

exports[`test bun add command > command handles args correctly 1`] = `
{
  "args": [
    "add",
    "@antfu/ni",
    "-D",
  ],
  "command": "bun",
}
`;

exports[`test bun execute command > command handles args correctly 1`] = `
{
  "args": [
    "x",
    "eslint",
    "--fix",
  ],
  "command": "bun",
}
`;

exports[`test bun run command > command handles args correctly 1`] = `
{
  "args": [
    "run",
    "arg0",
    "arg1-0 arg1-1",
  ],
  "command": "bun",
}
`;

exports[`test deno add command > command handles args correctly 1`] = `
{
  "args": [
    "add",
    "@antfu/ni",
    "-D",
  ],
  "command": "deno",
}
`;

exports[`test deno execute command > command handles args correctly 1`] = `
{
  "args": [
    "x",
    "eslint",
    "--fix",
  ],
  "command": "deno",
}
`;

exports[`test deno run command > command handles args correctly 1`] = `
{
  "args": [
    "task",
    "arg0",
    "arg1-0 arg1-1",
  ],
  "command": "deno",
}
`;

exports[`test npm add command > command handles args correctly 1`] = `
{
  "args": [
    "i",
    "@antfu/ni",
    "-D",
  ],
  "command": "npm",
}
`;

exports[`test npm execute command > command handles args correctly 1`] = `
{
  "args": [
    "eslint",
    "--fix",
  ],
  "command": "npx",
}
`;

exports[`test npm run command > command handles args correctly 1`] = `
{
  "args": [
    "run",
    "arg0",
    "--",
    "arg1-0 arg1-1",
  ],
  "command": "npm",
}
`;

exports[`test nub add command > command handles args correctly 1`] = `
{
  "args": [
    "add",
    "@antfu/ni",
    "-D",
  ],
  "command": "nub",
}
`;

exports[`test nub execute command > command handles args correctly 1`] = `
{
  "args": [
    "eslint",
    "--fix",
  ],
  "command": "nubx",
}
`;

exports[`test nub run command > command handles args correctly 1`] = `
{
  "args": [
    "run",
    "arg0",
    "arg1-0 arg1-1",
  ],
  "command": "nub",
}
`;

exports[`test pnpm add command > command handles args correctly 1`] = `
{
  "args": [
    "add",
    "@antfu/ni",
    "-D",
  ],
  "command": "pnpm",
}
`;

exports[`test pnpm execute command > command handles args correctly 1`] = `
{
  "args": [
    "dlx",
    "eslint",
    "--fix",
  ],
  "command": "pnpm",
}
`;

exports[`test pnpm run command > command handles args correctly 1`] = `
{
  "args": [
    "run",
    "arg0",
    "arg1-0 arg1-1",
  ],
  "command": "pnpm",
}
`;

exports[`test pnpm@6 add command > command handles args correctly 1`] = `
{
  "args": [
    "add",
    "@antfu/ni",
    "-D",
  ],
  "command": "pnpm",
}
`;

exports[`test pnpm@6 execute command > command handles args correctly 1`] = `
{
  "args": [
    "dlx",
    "eslint",
    "--fix",
  ],
  "command": "pnpm",
}
`;

exports[`test pnpm@6 run command > command handles args correctly 1`] = `
{
  "args": [
    "run",
    "arg0",
    "--",
    "arg1-0 arg1-1",
  ],
  "command": "pnpm",
}
`;

exports[`test pnpm-rush add command > command handles args correctly 1`] = `
{
  "args": [
    "add",
    "@antfu/ni",
    "-D",
  ],
  "command": "rush-pnpm",
}
`;

exports[`test pnpm-rush execute command > command handles args correctly 1`] = `
{
  "args": [
    "dlx",
    "eslint",
    "--fix",
  ],
  "command": "rush-pnpm",
}
`;

exports[`test pnpm-rush run command > command handles args correctly 1`] = `
{
  "args": [
    "run",
    "arg0",
    "arg1-0 arg1-1",
  ],
  "command": "rush-pnpm",
}
`;

exports[`test yarn add command > command handles args correctly 1`] = `
{
  "args": [
    "add",
    "@antfu/ni",
    "-D",
  ],
  "command": "yarn",
}
`;

exports[`test yarn execute command > command handles args correctly 1`] = `
{
  "args": [
    "eslint",
    "--fix",
  ],
  "command": "npx",
}
`;

exports[`test yarn run command > command handles args correctly 1`] = `
{
  "args": [
    "run",
    "arg0",
    "arg1-0 arg1-1",
  ],
  "command": "yarn",
}
`;

exports[`test yarn@berry add command > command handles args correctly 1`] = `
{
  "args": [
    "add",
    "@antfu/ni",
    "-D",
  ],
  "command": "yarn",
}
`;

exports[`test yarn@berry execute command > command handles args correctly 1`] = `
{
  "args": [
    "dlx",
    "eslint",
    "--fix",
  ],
  "command": "yarn",
}
`;

exports[`test yarn@berry run command > command handles args correctly 1`] = `
{
  "args": [
    "run",
    "arg0",
    "arg1-0 arg1-1",
  ],
  "command": "yarn",
}
`;
